QS-922: Refactor styles: use title class in all pages

--- a/src/scss/_partials/_card.scss
+++ b/src/scss/_partials/_card.scss
@@ -6,11 +6,11 @@
 		display:block;
 		padding: 15px 0 25px;
 		
-		.title {
+		.card-title {
 			font-weight: bold;
 		}
 		
-		.sub-title {
+		.card-sub-title {
 			color: $light-gray;
 			font-size: 14px;
 			margin-top: 5px;
