--- a/src/scss/_partials/_small-chip.scss
+++ b/src/scss/_partials/_small-chip.scss
@@ -1,5 +1,5 @@
 .small-chip {
-    font-size: 12px;
+    font-size: 0.785714286em;
     font-weight: bold;
     height: 18px;
     line-height: 18px;
