--- a/src/scss/_partials/_toolbar.scss
+++ b/src/scss/_partials/_toolbar.scss
@@ -5,8 +5,7 @@
 
 	.toolbar-inner {
 		background-color: $deep-purple;
-		color: #fff;
-		font-size: 14px;
+		font-size: 0.823529412em;
 		height: 60px;
 		margin: -30px auto 40px auto;
 		max-width: 480px;
