--- a/src/scss/_partials/_button.scss
+++ b/src/scss/_partials/_button.scss
@@ -3,7 +3,7 @@
 	height: 30px;
 	line-height: 30px;
 	text-transform: uppercase;
-	font-size: 11px;
+	font-size: 0.785714286em;
 	font-weight: bold;
 	padding: 0 20px 0 20px;
 }
