--- a/src/scss/_partials/_full-width-button.scss
+++ b/src/scss/_partials/_full-width-button.scss
@@ -2,7 +2,7 @@
 	height: 57px;
 	line-height: 57px;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 1em;
     font-weight: bold;
     width: 100%;
 }
