--- a/src/scss/_partials/_modal.scss
+++ b/src/scss/_partials/_modal.scss
@@ -5,7 +5,7 @@
 		background-color: $deep-purple;
 
 		.modal-title {
-			font-size: 14px;
+			font-size: 1.4em;
 			font-weight: bold;
 		}
 	}
@@ -13,7 +13,7 @@
 		.modal-button {
 			background-color: $deep-purple;
 			color: #fff;
-			font-size: 12px;
+			font-size: 0.857142857em;
 			font-weight: bold;
 		}
 	}
