--- a/src/scss/_partials/_navbar.scss
+++ b/src/scss/_partials/_navbar.scss
@@ -9,8 +9,13 @@
 		}
 		.center {
 			display: block;
-			//font-size: 15px;
+			font-size: 0.941176471em;
 		}
+
+		.center.large {
+			font-size: 1.3125em;
+		}
+
 		.left {
 			text-align: left;
 		}
