QS-922: Small refactor relative to previous commit

--- a/src/scss/_partials/_navbar.scss
+++ b/src/scss/_partials/_navbar.scss
@@ -25,7 +25,7 @@
 		.left, .right {
 			color: $deep-purple;
 			display: block;
-			font-size: 14px;
+			font-size: 0.823529412em;
 			margin-top: 12px;
 
 			.icon-left-arrow {
