--- a/src/scss/_partials/_text-input.scss
+++ b/src/scss/_partials/_text-input.scss
@@ -1,7 +1,7 @@
 .list-block {	
 	input[type=time], input[type=number], input[type=search], input[type=text], input[type=password], input[type=email], input[type=tel], input[type=url], input[type=date], input[type=datetime-local], select, textarea {
 		color: #fff;
-		font-size: 14px;
+		font-size: 1em;
 		margin-bottom: 10px;
 		margin-top: 5px;
 	}
