QS-922: Fix join page and modal styles

--- a/src/scss/_partials/_form.scss
+++ b/src/scss/_partials/_form.scss
@@ -1,7 +1,7 @@
 .list-block {
 	 ul {
 		background: none;
-		text-transform: uppercase;
+		text-transform: none;
 		
 		&::before {
 			content: none;
