--- a/src/scss/_partials/_modal.scss
+++ b/src/scss/_partials/_modal.scss
@@ -8,12 +8,15 @@
 			font-size: 1.4em;
 			font-weight: bold;
 		}
+		.modal-text {
+			font-size: 1.4em;
+		}
 	}
 	.modal-buttons {
 		.modal-button {
 			background-color: $deep-purple;
 			color: #fff;
-			font-size: 0.857142857em;
+			font-size: 1.2em;
 			font-weight: bold;
 		}
 	}
