--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -10,6 +10,8 @@
 @import '_partials/modal';
 @import '_partials/form';
 @import '_partials/text-input';
+@import '_partials/date-input';
+@import '_partials/location-input';
 @import '_partials/text-radios';
 @import '_partials/button';
 @import '_partials/full-width-button';
