QS-922: Fix descriptive gender styles

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -12,6 +12,7 @@
 @import '_partials/text-input';
 @import '_partials/date-input';
 @import '_partials/location-input';
+@import '_partials/input-checkbox';
 @import '_partials/text-radios';
 @import '_partials/button';
 @import '_partials/full-width-button';
