--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -6,6 +6,7 @@
 @import '_partials/theme.color';
 @import '_partials/navbar';
 @import '_partials/toolbar';
+@import '_partials/messages-toolbar';
 @import '_partials/panel';
 @import '_partials/modal';
 @import '_partials/form';
@@ -24,6 +25,8 @@
 @import '_partials/card';
 @import '_partials/user';
 @import '_partials/profile-avatars-connection';
+@import '_partials/notifications';
+@import '_partials/daily-messages';
 
 * {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
