QS-906: Layouts for interests and other interests

--- a/src/scss/_partials/_fonts.scss
+++ b/src/scss/_partials/_fonts.scss
@@ -87,7 +87,7 @@ $nekuno-logo-font: 'klinic_slabmedium';
 .icon-calendar:before {
 	content: "\e902";
 }
-.icon-chanels:before {
+.icon-channels:before {
 	content: "\e903";
 }
 .icon-clock:before {
