--- a/src/scss/pages/other-interests.scss
+++ b/src/scss/pages/other-interests.scss
@@ -1,12 +1,12 @@
 body #root .App .view .page.other-interests-page  {
-  height: 100%;
-
   #page-content {
-    background: url('img/provisional-screens/other-interests_coming_soon.jpg') no-repeat;
-    background-size: 100% auto;
-    height: 100%;
-    margin-left: 0;
-    margin-right: 0;
-    width: 100%;
+    margin: 60px auto 0 auto;
+    width: 98%;
+
+    .card {
+      display: inline-block;
+      margin: 5px 1% 5px 1%;
+      width: 48%;
+    }
   }
 }
