--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -9,6 +9,7 @@
 @import '_partials/messages-toolbar';
 @import '_partials/panel';
 @import '_partials/modal';
+@import '_partials/popup';
 @import '_partials/form';
 @import '_partials/text-input';
 @import '_partials/date-input';
@@ -59,32 +60,36 @@ body {
 
 			.view {
 				background: $dark-purple;
+				color: #fff;
 				overflow-y: visible;
+				.title {
+					font-size: 1.785714286em;
+					text-align: center;
+				}
+
+				.content-block {
+					color: #fff;
+				}
+
+				.bold {
+					font-weight: bold;
+				}
+
+				.icon-wrapper {
+					cursor: pointer;
+				}
 
 				.page {
 					background: $dark-purple;
 					height: auto;
 
 					#page-content {
-						color: #fff;
 						margin: 50px auto 0 auto;
 						width: 85%;
 
-						.title {
-							font-size: 1.785714286em;
-							text-align: center;
-						}
 						.sub-title {
 							font-size: 1.214285714em;
 							text-align: center;
-						}
-
-						.content-block {
-							color: #fff;
-						}
-
-						.bold {
-							font-weight: bold;
 						}
 
 						.list-block .item-content {
