Fix CSS to show half face in own questions page

--- a/src/scss/pages/questions.scss
+++ b/src/scss/pages/questions.scss
@@ -35,6 +35,7 @@ body #root .App .view .page.questions-page  {
           margin-top: -35px;
           overflow: hidden;
           width: 90px;
+          -webkit-backface-visibility: hidden;
 
           img {
             border-radius: 50%;
