--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -12,3 +12,6 @@ $green-alert: #69d6b8;
 $pink: #8262a1;
 $flesh-colored: #d96484;
 $yellow: #adb32f;
+$orange-link: #dea72f;
+$spotify-green: #82b919;
+$youtube-red: #cd201f;
