--- a/src/scss/_partials/_popup.scss
+++ b/src/scss/_partials/_popup.scss
@@ -9,8 +9,7 @@
 
 	.content-block {
 		a {
-			color: $deep-purple;
-			font-weight: bold;
+			color: #fff;
 			font-size: 1.1em;
 		}
 		.popup-filter-contents-title {
@@ -21,7 +20,7 @@
 			margin-top: 20px;
 			text-align: center;
 
-			.icon-large-wrapper {
+			.icons-large-wrapper {
 				background-color: $deep-purple;
 				border-radius: 50%;
 				cursor: pointer;
@@ -41,10 +40,10 @@
 					line-height: 0.7;
 				}
 
-				.icon-large-text {
-					font-size: 0.7em;
+				.icons-large-text {
+					font-size: 0.8em;
 					font-weight: bold;
-					margin-top: 10px;
+					margin-top: 5px;
 				}
 			}
 		}
