QS-946: Own interests functionality

--- a/src/scss/_partials/_card.scss
+++ b/src/scss/_partials/_card.scss
@@ -86,10 +86,11 @@
 			
 			.image img {
 				width: 100%;
+				vertical-align: middle;
 			}
 
 			.matching {
-				margin-top: -37px;
+				margin-top: -32px;
 				position: relative;
 
 				.matching-value {
