--- a/src/scss/pages/register.scss
+++ b/src/scss/pages/register.scss
@@ -42,16 +42,23 @@ body #root .App .view .page {
 
   #register-landing-image {
     width:80%;
-    height: 80%;
+    height: 425px;
+    background: url('img/register-questions-landing-transparent.png');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    margin-left:10%;
+    margin-top:25px;
   }
 
   .user-image {
     border-radius: 50%;
     height: 60px;
-    margin: 1px 0 0 1px;
+    margin: auto;
     width: 60px;
 
-    text-align:center;
+    padding-top:157px;
+    padding-left:7px;
+
     img {
       border-radius: 50%;
       height: 60px;
