QS-946: Implement own interests carousel

--- a/src/scss/pages/interests.scss
+++ b/src/scss/pages/interests.scss
@@ -3,10 +3,15 @@ body #root .App .view .page.interests-page  {
     margin: 60px auto 0 auto;
     width: 98%;
 
-    .card {
-      display: inline-block;
-      margin: 5px 1% 5px 1%;
-      width: 48%;
+    .content-list {
+      .card {
+        display: inline-block;
+        margin: 5px 1% 5px 1%;
+        width: 48%;
+      }
+    }
+    .content-carousel .swiper-slide {
+      width: 275px;
     }
   }
 }
