--- a/src/scss/pages/register.scss
+++ b/src/scss/pages/register.scss
@@ -19,50 +19,53 @@ body #root .App .view .page {
     text-align: center;
   }
 
-  #register-landing-first {
-    width:80%;
-    margin-left:10%;
-    margin-top:20%;
-    font-size:30px;
-    text-align:center;
-    margin-bottom:10px;
-  }
-  #register-landing-second {
-    width:80%;
-    margin-left:10%;
-    text-align:center;
-    margin-bottom:10px;
-  }
+  #register-landing{
+    #register-landing-first {
+      width:80%;
+      margin-left:10%;
+      margin-top:20%;
+      font-size:30px;
+      text-align:center;
+      margin-bottom:10px;
+    }
+    #register-landing-second {
+      width:80%;
+      margin-left:10%;
+      text-align:center;
+      margin-bottom:10px;
+    }
 
-  #start-test {
-    width:90%;
-    margin-left:5%;
-    margin-bottom:5%;
-  }
+    #start-test {
+      width:90%;
+      margin-left:5%;
+      margin-bottom:5%;
+    }
 
-  #register-landing-image {
-    width:80%;
-    height: 425px;
-    background: url('img/register-questions-landing-transparent.png');
-    background-size: 100%;
-    background-repeat: no-repeat;
-    margin-left:10%;
-    margin-top:25px;
-  }
+    #register-landing-image {
+      width:80%;
+      height: 425px;
+      background: url('img/register-questions-landing-transparent.png');
+      background-size: 100%;
+      background-repeat: no-repeat;
+      margin-left:10%;
+      margin-top:25px;
+    }
 
-  .user-image {
-    border-radius: 50%;
-    height: 60px;
-    margin: auto;
-    width: 60px;
-
-    padding-top:157px;
-    padding-left:7px;
-
-    img {
+    .user-image {
       border-radius: 50%;
       height: 60px;
+      margin: auto;
       width: 60px;
+
+      padding-top:157px;
+      padding-left:7px;
+
+      img {
+        border-radius: 50%;
+        height: 60px;
+        width: 60px;
+      }
     }
   }
+
 }
