QS-942: Connect social networks page (not finished)

--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -8,11 +8,15 @@ $dark-blue: #1b1843;
 $light-blue: #6abeee;
 $dark-gray: #1d2029;
 $light-gray: #888888;
+$light-gray-translucent: rgba(50, 50, 50, 0.5);
 $light-green: #32ca91;
 $green-alert: #69d6b8;
 $pink: #8262a1;
 $flesh-colored: #d96484;
 $yellow: #adb32f;
 $orange-link: #dea72f;
+$facebook-blue: #3b5998;
+$twitter-blue: #55acee;
 $spotify-green: #82b919;
+$google-plus-red: #d34836;
 $youtube-red: #cd201f;
