--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -28,6 +28,7 @@
 @import '_partials/profile-avatars-connection';
 @import '_partials/notifications';
 @import '_partials/daily-messages';
+@import '_partials/social-wheels';
 
 * {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
@@ -89,6 +90,11 @@ body {
 
 						.sub-title {
 							font-size: 1.214285714em;
+							text-align: center;
+						}
+
+						.excerpt {
+							margin-top: 10px;
 							text-align: center;
 						}
 
