--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -92,6 +92,11 @@ body {
 							text-align: center;
 						}
 
+						.excerpt {
+							margin-top: 10px;
+							text-align: center;
+						}
+
 						.list-block .item-content {
 							font-size: 0.823529412em;
 							padding-left: 0;
