--- a/src/scss/_partials/_social-wheels.scss
+++ b/src/scss/_partials/_social-wheels.scss
@@ -90,5 +90,14 @@ body #root .App .view {
     .text-spotify {
       background-color: $spotify-green;
     }
+
+    .big-icon-wrapper.icon-wrapper {
+      cursor: pointer;
+      font-size: 2.1em;
+      height: 30px;
+      margin-left: -15px;
+      margin-top: -7.5px;
+      width: 30px;
+    }
   }
 }
