--- a/src/scss/_partials/_fonts.scss
+++ b/src/scss/_partials/_fonts.scss
@@ -64,6 +64,10 @@ $nekuno-logo-font: 'klinic_slabmedium';
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.disabled-icon {
+	opacity: 0.5;
+}
+
 .icon-circle:before {
 	content: "\e929";
 }
