QS-915: google-plus -> google

--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -18,5 +18,5 @@ $orange-link: #dea72f;
 $facebook-blue: #3b5998;
 $twitter-blue: #55acee;
 $spotify-green: #82b919;
-$google-plus-red: #d34836;
+$google-red: #d34836;
 $youtube-red: #cd201f;
