--- a/src/scss/_partials/_social-wheels.scss
+++ b/src/scss/_partials/_social-wheels.scss
@@ -78,11 +78,11 @@ body #root .App .view {
     .text-facebook {
       background-color: $facebook-blue;
     }
-    .wheel-google-plus {
-      stroke: $google-plus-red;
+    .wheel-google {
+      stroke: $google-red;
     }
-    .text-google-plus {
-      background-color: $google-plus-red;
+    .text-google {
+      background-color: $google-red;
     }
     .wheel-spotify {
       stroke: $spotify-green;
