--- a/src/scss/_partials/_fonts.scss
+++ b/src/scss/_partials/_fonts.scss
@@ -109,7 +109,7 @@ $nekuno-logo-font: 'klinic_slabmedium';
 .icon-female:before {
 	content: "\e908";
 }
-.icon-google-plus:before {
+.icon-google:before {
 	content: "\e909";
 }
 .icon-image:before {
