Add other profile message button

--- a/src/scss/_partials/_fonts.scss
+++ b/src/scss/_partials/_fonts.scss
@@ -136,6 +136,7 @@ $nekuno-logo-font: 'klinic_slabmedium';
 }
 .icon-message:before {
 	content: "\e911";
+	font-size: 20px;
 }
 .icon-mixed-gender:before {
 	content: "\e912";
