Add channel icon on creator cards

--- a/src/scss/_partials/_fonts.scss
+++ b/src/scss/_partials/_fonts.scss
@@ -93,6 +93,7 @@ $nekuno-logo-font: 'klinic_slabmedium';
 }
 .icon-channels:before {
 	content: "\e903";
+	font-size: 20px;
 }
 .icon-clock:before {
 	content: "\e904";
