--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -12,10 +12,12 @@
 @import '_partials/popup';
 @import '_partials/form';
 @import '_partials/text-input';
+@import '_partials/tag-input';
 @import '_partials/date-input';
 @import '_partials/location-input';
 @import '_partials/input-checkbox';
 @import '_partials/text-radios';
+@import '_partials/text-checkboxes';
 @import '_partials/button';
 @import '_partials/full-width-button';
 @import '_partials/chip';
