--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -10,7 +10,9 @@ $dark-gray: #1d2029;
 $light-gray: #888888;
 $light-gray-translucent: rgba(50, 50, 50, 0.5);
 $light-green: #32ca91;
+$light-green-translucent: rgba(50, 202, 145, 0.5);
 $green-alert: #69d6b8;
+$green-alert-translucent: rgba(105, 215, 184, 0.5);
 $pink: #8262a1;
 $flesh-colored: #d96484;
 $yellow: #adb32f;
