--- a/src/scss/_partials/_chip.scss
+++ b/src/scss/_partials/_chip.scss
@@ -34,3 +34,22 @@
 .chip.disabled-chip {
   background: none;
 }
+
+.chip-1 {
+  width: 99%;
+}
+.chip-2 {
+  width: 49%;
+}
+.chip-3 {
+  width: 33%;
+}
+.chip-4 {
+  width: 49%;
+}
+.chip-5 {
+  width: 33%;
+}
+.chip-6 {
+  width: 33%;
+}
