QS-958: Add double choices

--- a/src/scss/pages/create-thread.scss
+++ b/src/scss/pages/create-thread.scss
@@ -64,5 +64,15 @@ body #root .App .view .page.create-thread-page  {
     .tag-filter {
       margin-top: -20px;
     }
+
+    .double-choice-filter {
+      .double-choice-choice {
+        padding-bottom: 0;
+      }
+      .double-choice-detail {
+        margin-top: -30px;
+        padding-top: 0;
+      }
+    }
   }
 }
