--- a/src/scss/pages/create-thread.scss
+++ b/src/scss/pages/create-thread.scss
@@ -61,6 +61,39 @@ body #root .App .view .page.create-thread-page  {
       }
     }
 
+    .location-tag-filter {
+      margin-bottom: 90px;
+
+      .suggestion-list-wrapper {
+        position: absolute;
+
+        ul {
+          -webkit-padding-start: 0px;
+          li {
+            display: inline-block;
+            list-style-type: none;
+            font-weight: 400;
+            background: $deep-purple;
+            height: 32px;
+            line-height: 32px;
+            border-radius: 16px;
+            padding: 0 12px;
+            box-sizing: border-box;
+            vertical-align: middle;
+            display: -webkit-inline-box;
+            display: -ms-inline-flexbox;
+            display: -webkit-inline-flex;
+            display: inline-flex;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            -webkit-align-items: center;
+            align-items: center;
+            margin: 2px;
+          }
+        }
+      }
+    }
+
     .tag-filter {
       margin-top: -20px;
     }
