QS-958: Change defaultFilters format to be equal than metadata and use new Geosuggest component

--- a/src/scss/_partials/_tag-input.scss
+++ b/src/scss/_partials/_tag-input.scss
@@ -1,7 +1,7 @@
 .tag-input-wrapper {
   display: inline-block;
 
-  .tag-input {
+  .tag-input, .geosuggest__input-wrapper {
     font-weight: 400;
     background: $deep-purple;
     height: 60px;
