--- a/src/scss/pages/create-thread.scss
+++ b/src/scss/pages/create-thread.scss
@@ -64,7 +64,7 @@ body #root .App .view .page.create-thread-page  {
     .location-tag-filter {
       margin-bottom: 90px;
 
-      .suggestion-list-wrapper {
+      .geosuggest__suggests-wrapper {
         position: absolute;
 
         ul {
