QS-958: Fix location filter and chip class

--- a/src/scss/pages/create-thread.scss
+++ b/src/scss/pages/create-thread.scss
@@ -105,6 +105,13 @@ body #root .App .view .page.create-thread-page  {
       height: 30px;
     }
 
+    .location-filter {
+      display: block;
+
+      .text-checkboxes .chip {
+        max-width: 95%;
+      }
+    }
     .location-tag-filter {
       .geosuggest__suggests-wrapper {
         position: absolute;
