--- a/src/scss/_partials/_tag-input.scss
+++ b/src/scss/_partials/_tag-input.scss
@@ -49,7 +49,8 @@
     position: absolute;
 
     ul {
-      -webkit-padding-start: 0px;
+      padding: 0px;
+
       li {
         display: inline-block;
         list-style-type: none;
