--- a/src/scss/pages/create-thread.scss
+++ b/src/scss/pages/create-thread.scss
@@ -17,7 +17,7 @@ body #root .App .view .page.create-thread-page  {
     }
     .users-last-vertical-line {
       border-left: 1px solid $green-alert;
-      bottom: 230px;
+      bottom: 330px;
       height: 35%;
       margin-left: 7px;
       position: absolute;
@@ -44,6 +44,11 @@ body #root .App .view .page.create-thread-page  {
       position: absolute;
     }
 
+    .main-filter-wprapper, .users-filters-wrapper {
+      display: table;
+      height: 100%;
+      width: 100%;
+    }
     .thread-filter {
       display: table-row;
 
@@ -96,20 +101,23 @@ body #root .App .view .page.create-thread-page  {
     }
 
     .radio-filter {
-      display: block;
+      display: table-row;
       width: 100%;
     }
 
     .table-row {
       display: table-row;
       height: 30px;
+      width: 100%;
     }
 
     .location-filter {
       display: block;
 
-      .text-checkboxes .chip {
-        max-width: 95%;
+      .text-checkboxes {
+        .chip {
+          max-width: 95%;
+        }
       }
     }
     .location-tag-filter {
@@ -121,7 +129,8 @@ body #root .App .view .page.create-thread-page  {
         padding: 0 10px;
 
         ul {
-          -webkit-padding-start: 0px;
+          padding: 0px;
+
           li {
             display: inline-block;
             list-style-type: none;
@@ -146,5 +155,28 @@ body #root .App .view .page.create-thread-page  {
         }
       }
     }
+
+    @media only screen and (min-width: 360px) and (max-width: 375px) {
+      .thread-filter {
+        .text-radios {
+          width: 85%;
+        }
+        .text-checkboxes {
+          max-width: 85%;
+        }
+      }
+    }
+
+    @media only screen and (max-width: 359px) {
+      .thread-filter {
+        .text-radios {
+          width: 80%;
+        }
+        .text-checkboxes {
+          max-width: 80%;
+        }
+      }
+    }
+
   }
 }
