--- a/src/scss/_partials/_tag-input.scss
+++ b/src/scss/_partials/_tag-input.scss
@@ -27,6 +27,11 @@
       font-size: 1.3em;
       width: 130px;
     }
+    .tag-input-text {
+      cursor: pointer;
+      font-size: 1.3em;
+    }
+
     ::-webkit-input-placeholder {
       color: white;
       text-align: center;
