--- a/src/scss/_partials/_tag-input.scss
+++ b/src/scss/_partials/_tag-input.scss
@@ -1,8 +1,27 @@
 .tag-input-wrapper {
   display: inline-block;
+  &::after {
+    content: '';
+    height: 1px;
+    width: 100%;
+    background-color: #888888;
+    display: block;
+    z-index: 15;
 
-  .tag-input, .geosuggest__input-wrapper {
+  }
+  .tag-input {
     font-weight: 400;
+    background: transparent;
+    height: 60px;
+    line-height: 60px;
+    padding: 0 5px;
+    vertical-align: middle;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: -webkit-inline-flex;
+    display: inline-flex;
+    margin: 2px 0;
+    /*font-weight: 400;
     background: $deep-purple;
     height: 60px;
     line-height: 60px;
@@ -18,43 +37,31 @@
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
-    margin: 2px 0;
+    margin: 2px 0;*/
+
+
 
     input[type="text"] {
-      background-color: $deep-purple;
+      background-color: transparent;
       border: none;
       color: #fff;
       font-size: 1.3em;
-      width: 130px;
-    }
-    .tag-input-text {
-      cursor: pointer;
-      font-size: 1.3em;
+      width: 90%;
+
     }
 
-    ::-webkit-input-placeholder {
-      color: white;
-      text-align: center;
-    }
-    :-moz-placeholder { /* Firefox 18- */
-      color: white;
-      text-align: center;
-    }
-    ::-moz-placeholder { /* Firefox 19+ */
-      color: white;
-      text-align: center;
-    }
-    :-ms-input-placeholder {
-      color: white;
-      text-align: center;
-    }
+    /*.tag-input-text {
+      cursor: pointer;
+      font-size: 1.3em;
+    }*/
+
   }
 
   .tag-suggestions {
     position: absolute;
 
     ul {
-      padding: 0px;
+      padding: 0;
 
       li {
         display: inline-block;
